@@ -1,0 +1,22 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+  <configSections>
+    <section
+    name="hibernate-configuration"
+    type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"
+/>
+  </configSections>
+
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="dialect">NHibernate.Dialect.MsSql2000Dialect</property>
+      <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
+      <property name="connection.connection_string">Data Source=.\SQLEXPRESS;Initial Catalog=NHibernate3BooksOneToMany;Integrated Security=True</property>
+      <property name="proxyfactory.factory_class">
+        NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle
+      </property>
+      <property name="show_sql">true</property>
+      <mapping assembly="Books.Inverse" />
+    </session-factory>
+  </hibernate-configuration>
+</configuration>
