@@ -1,0 +1,14 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<hibernate-mapping xmlns="urn:nhibernate-mapping-2.2"
+assembly="Books"
+namespace="Books">
+  <class name="Chapter" table="Chapters">
+    <id name="Id">
+      <generator class="guid" />
+    </id>
+    <property name="Title" not-null="true" />
+    <property name="Notes" />
+    <many-to-one name="Book" column="BookId" />
+    <property name="ChapterIndex"/>
+  </class>
+</hibernate-mapping>
