@@ -11,6 +11,8 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Schemas", "Schemas", "{6FE8
 		..\..\..\..\..\Software\NHibernate-3.0.0.GA-bin\Required_Bins\nhibernate-mapping.xsd = ..\..\..\..\..\Software\NHibernate-3.0.0.GA-bin\Required_Bins\nhibernate-mapping.xsd
 	EndProjectSection
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Books.Inverse", "Books.Inverse\Books.Inverse.csproj", "{3B1501A1-A994-437B-9819-A0E11C85F6CC}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -25,6 +27,10 @@ Global
 		{B0EADCDE-1F39-49F6-B2D6-FDB8EBC0DD4E}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{B0EADCDE-1F39-49F6-B2D6-FDB8EBC0DD4E}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{B0EADCDE-1F39-49F6-B2D6-FDB8EBC0DD4E}.Release|Any CPU.Build.0 = Release|Any CPU
+		{3B1501A1-A994-437B-9819-A0E11C85F6CC}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{3B1501A1-A994-437B-9819-A0E11C85F6CC}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{3B1501A1-A994-437B-9819-A0E11C85F6CC}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{3B1501A1-A994-437B-9819-A0E11C85F6CC}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
